--- a/index.html
+++ b/index.html
@@ -212,14 +212,11 @@
     <section>
       <h2>About Me</h2>
       <p>
-        I am Arifuzzaman Shaon, a dedicated HR professional currently working as a Welfare Officer
-        at AMANN Bangladesh Ltd. I have completed PGD-HRM and an MBA in HRM, and I am passionate about
-        employee welfare and organizational development.
+        I’m Arifuzzaman Shaon, a dedicated HR professional currently serving as a Welfare Officer at AMANN Bangladesh Ltd. 
+        With a PGD-HRM and an MBA in HRM, I am committed to promoting employee welfare and supporting organizational growth. 
       </p>
       <p>
-        My work focuses on employee relations, salary payment administration, employee supervision,
-        and ensuring a safe, fair, and healthy workplace environment. My vision is to grow as a strategic
-        HR leader who creates value for both employees and the organization.
+        My long-term vision is to grow into a strategic HR leader who creates meaningful value for both employees and the organization.
       </p>
     </section>
   </main>
